<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F0F0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/expressao"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/black"
            android:gravity="end|bottom"
            android:paddingEnd="20dp"
            android:paddingBottom="14dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/black"
            android:gravity="end|bottom"
            android:paddingEnd="20dp"
            android:paddingBottom="14dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expressao" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result">

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btn_backspace"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/backspace"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/divide"
                android:textSize="18dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1">

            <Button
                android:id="@+id/btn_sete"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/sete"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btn_oito"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/oito"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_nove"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/nove"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/multiplicate"
                android:textSize="18dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2">

            <Button
                android:id="@+id/btn_quatro"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/quatro"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btn_cinco"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/cinco"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_seis"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/seis"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_subtract"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/subtract"
                android:textSize="18dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line3"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/btn_um"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/um"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btn_dois"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/dois"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_tres"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/tres"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_sum"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/sum"
                android:textSize="18dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/line5"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line4"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/dot"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/zero"
                android:textSize="18dp" />


            <Button
                android:id="@+id/btn_equal"
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/yellow_dark"
                android:text="@string/equal"
                android:textSize="18dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>